fa-24 final solutions updated

--- a/problems/fa24-final/q01.md
+++ b/problems/fa24-final/q01.md
@@ -20,8 +20,9 @@ To calculate the proportion of products in `skin` that are expensive (price at l
 When we call `np.mean` on this Boolean series, Python internally treats `True` as 1 and `False` as 0. The mean of this series therefore gives the proportion of `True` values, which corresponds to the proportion of products that meet the "expensive" criteria.
 
 Alternatively, we can:
-1. Count the total number of "expensive" products using `(skin['Price'] >= 100).sum()`.
-2. Divide this count by the total number of products in the dataset (`skin.shape[0]`).
+
+- Count the total number of "expensive" products using `(skin['Price'] >= 100).sum()`.
+- Divide this count by the total number of products in the dataset (`skin.shape[0]`).
 
 Both approaches yield the same result.
 
