--- a/problems/fa24-final/q02.md
+++ b/problems/fa24-final/q02.md
@@ -6,8 +6,9 @@ keyword for querying is \_\_(ii)\_\_.
 
 # BEGIN SOLUTION
 **Answer**:
-`(i)`: `HAVING`
-`(ii)`: `WHERE`
+
+(i): HAVING  
+(ii): WHERE 
 
 An important distinction to make for part `(ii)` is that we're asking about the keyword for **querying**. `SELECT` is incorrect, as `SELECT` is for specifying a subset of **columns**, whereas querying is for specifying a subset of **rows**.
 
