--- a/problems/fa24-final/q03.md
+++ b/problems/fa24-final/q03.md
@@ -3,38 +3,37 @@
 Consider the Series `small_prices` and `vc`, both of which are defined
 below.
 
-
+```python
     small_prices = pd.Series([36, 36, 18, 100, 18, 36, 1, 1, 1, 36])
 
     vc = small_prices.value_counts().sort_values(ascending=False)`
-
+```
 In each of the parts below, select the value that the provided
-expression evaluates to. If the expression errors, select "Error\".
+expression evaluates to. If the expression errors, select "Error".
 
 # BEGIN SUBPROB
 
 `vc.iloc[0]`
 
-( ) `0`
-( ) `1`
-( ) `2`
-( ) `3`
-( ) `4`
-( ) `18`
-( ) `36`
-( ) `100`
-( ) `Error`
-( ) `None of these`
+( ) 0
+( ) 1
+( ) 2
+( ) 3
+( ) 4
+( ) 18
+( ) 36
+( ) 100
+( ) Error
+( ) None of these
 
 # BEGIN SOLUTION
-**Answer**: `4`
+**Answer**: 4
 
-`vc` computes the frequency of each value in small_prices, sorts the counts in descending order, and stores the result in vc. The resulting vc will look like this, where `36, 1, 18, 100` are the indices and `4, 3, 2, 1` are the values:
+`vc` computes the frequency of each value in small_prices, sorts the counts in descending order, and stores the result in vc. The resulting vc will look like this, where 36, 1, 18, and 100 are the indices and 4, 3, 2, and 1 are the values:
 
 <center><img src="../assets/images/fa24-final/vc.png" width=300></center>
 
-- `iloc[0]` retrieves the **value** at **integer position** 0 in `vc`. Remember that position can be different than index for a Series: for this Series, the indices are `36, 1, 18, 100`, whereas the **integer positions** are `0, 1, 2, 3`.
-- The result is `4`.
+- `iloc[0]` retrieves the **value** at **integer position** 0 in `vc`. The result is 4.
 
 <average>73</average>
 
@@ -46,25 +45,25 @@ expression evaluates to. If the expression errors, select "Error\".
 
 `vc.loc[0]`
 
-( ) `0`
-( ) `1`
-( ) `2`
-( ) `3`
-( ) `4`
-( ) `18`
-( ) `36`
-( ) `100`
-( ) `Error`
-( ) `None of these`
+( ) 0
+( ) 1
+( ) 2
+( ) 3
+( ) 4
+( ) 18
+( ) 36
+( ) 100
+( ) Error
+( ) None of these
 
 # BEGIN SOLUTION
 
-**Answer**: `Error`
+**Answer**: Error
 
 <center><img src="../assets/images/fa24-final/vc.png" width=300></center>
 
-- `loc[0]` attempts to retrieve the **value** associated with the **index** `0` in `vc`.
-- Since `vc` has indices `36, 1, 18, 100`, and `0` is not a valid index, this operation results in an error.
+- `loc[0]` attempts to retrieve the **value** associated with the **index** 0 in `vc`.
+- Since `vc` has indices 36, 1, 18, 10, and 0 is not a valid index, this operation results in an error.
 
 <average>83</average>
 
@@ -76,24 +75,24 @@ expression evaluates to. If the expression errors, select "Error\".
 
 `vc.index[0]`
 
-( ) `0`
-( ) `1`
-( ) `2`
-( ) `3`
-( ) `4`
-( ) `18`
-( ) `36`
-( ) `100`
-( ) `Error`
-( ) `None of these`
+( ) 0
+( ) 1
+( ) 2
+( ) 3
+( ) 4
+( ) 18
+( ) 36
+( ) 100
+( ) Error
+( ) None of these
 
 # BEGIN SOLUTION
 
-**Answer**: `36`
+**Answer**: 36
 
 <center><img src="../assets/images/fa24-final/vc.png" width=300></center>
 
-- `index[0]` retrieves the first **index** in `vc`, which corresponds to the value `36`.`
+- `index[0]` retrieves the first **index** in `vc`, which corresponds to the value 36.
 
 <average>69</average>
 
@@ -105,24 +104,24 @@ expression evaluates to. If the expression errors, select "Error\".
 
 `vc.iloc[1]`
 
-( ) `0`
-( ) `1`
-( ) `2`
-( ) `3`
-( ) `4`
-( ) `18`
-( ) `36`
-( ) `100`
-( ) `Error`
-( ) `None of these`
+( ) 0
+( ) 1
+( ) 2
+( ) 3
+( ) 4
+( ) 18
+( ) 36
+( ) 100
+( ) Error
+( ) None of these
 
 # BEGIN SOLUTION
 
-**Answer**: `3`
+**Answer**: 3
 
 <center><img src="../assets/images/fa24-final/vc.png" width=300></center>
 
-- `iloc[1]` retrieves the **value** at **integer position** 1 in `vc`, which is `3`. 
+- `iloc[1]` retrieves the **value** at **integer position** 1 in `vc`, which is 3. 
 
 <average>74</average>
 
@@ -134,24 +133,23 @@ expression evaluates to. If the expression errors, select "Error\".
 
 `vc.loc[1]`
 
-( ) `0`
-( ) `1`
-( ) `2`
-( ) `3`
-( ) `4`
-( ) `18`
-( ) `36`
-( ) `100`
-( ) `Error`
-( ) `None of these`
+( ) 0
+( ) 1
+( ) 2
+( ) 3
+( ) 4
+( ) 18
+( ) 36
+( ) 100
+( ) Error
+( ) None of these
 
 # BEGIN SOLUTION
-**Answer**: `3`
+**Answer**: 3
 
 <center><img src="../assets/images/fa24-final/vc.png" width=300></center>
 
-- `loc[1]` retrieves the **value** associated with the **index** `1` in `vc`, which corresponds to the frequency of the value `1` in `small_prices`.
-- The result is `3`.
+- `loc[1]` retrieves the **value** associated with the **index** 1 in `vc`, which corresponds to the frequency of the value 1 in `small_prices`. The result is 3.
 
 <average>80</average>
 
@@ -163,24 +161,23 @@ expression evaluates to. If the expression errors, select "Error\".
 
 `vc.index[1]`
 
-( ) `0`
-( ) `1`
-( ) `2`
-( ) `3`
-( ) `4`
-( ) `18`
-( ) `36`
-( ) `100`
-( ) `Error`
-( ) `None of these`
+( ) 0
+( ) 1
+( ) 2
+( ) 3
+( ) 4
+( ) 18
+( ) 36
+( ) 100
+( ) Error
+( ) None of these
 
 # BEGIN SOLUTION
-**Answer**: `1`
+**Answer**: 1
 
 <center><img src="../assets/images/fa24-final/vc.png" width=300></center>
 
-- `index[1]` retrieves the positionally second index in `vc`.
-- The result is `1`.
+- `index[1]` retrieves the positionally second index in `vc`. The result is 1.
 
 <average>64</average>
 
