--- a/problems/fa24-final/q04.md
+++ b/problems/fa24-final/q04.md
@@ -3,53 +3,51 @@
 Consider the DataFrames `type_pivot`, `clinique`, `fresh`, and `boscia`,
 defined below.
 
-
+```python
     type_pivot = skin.pivot_table(index="Type",
                                   columns="Brand", 
                                   values="Sensitive",
                                   aggfunc=lambda s: s.shape[0] + 1)
                                    
-    clinique = skin[skin["Brand"] == "CLINIQUE"]
-    fresh = skin[skin["Brand"] == "FRESH"]
+    clinique = skin[skin["Brand"] == "clinique"]
+    fresh = skin[skin["Brand"] == "fresh"]
     boscia = skin[skin["Brand"] == "BOSCIA"]
-
+```
 Three columns of `type_pivot` are shown below **in their entirety**.
 
-<center><img src="..\assets\images\fa24-final\type-pivot.png" width=600></center>
+<center><img src="..\assets\images\fa24-final\type-pivot.png" width=400 height=250></center>
 
 In each of the parts below, give your answer as an **integer**.
 
 # BEGIN SUBPROB
-
+```python
 How many rows are in the following DataFrame?
 
     clinique.merge(fresh, on="Type", how="inner")
-
+```
 # BEGIN SOLUTION
 
-**Answer**: `10`
+**Answer**: 10
 
-The expression `clinique.merge(fresh, on="Type", how="inner")` performs an **inner join** on the `Type` column between the `clinique` and `fresh` DataFrames. An inner join includes only rows where the `Type` values are present in both DataFrames.
+The expression `clinique.merge(fresh, on="Type", how="inner")` performs an **inner join** on the `"Type"` column between the `clinique` and `fresh` DataFrames. An inner join includes only rows where the `"Type"` values are present in both DataFrames.
 
-From the provided `type_pivot` table:
+From the provided `type_pivot` table, we know that  the overlapping `”Type”` values between clinique and fresh are:
 
-- The overlapping `Type` values between `CLINIQUE` and `FRESH` are:
+  - Face Mask (3.0 for `clinique`, 4.0 for `fresh`)
 
-  - `Face Mask` (3.0 for `CLINIQUE`, 4.0 for `FRESH`)
-
-  - `Moisturizer` (3.0 for `CLINIQUE`, 3.0 for `FRESH`)
+  - Moisturizer (3.0 for `clinique`, 3.0 for `fresh`)
 
 However, we must notice that the `aggfunc` for our original pivot table is `lambda s: s.shape[0] + 1`. Thus, we know that the values in the pivot table include an additional count of 1 for each group. This means the raw counts are actually:
 
-- `Face Mask`: 2 rows in `CLINIQUE`, 3 rows in `FRESH`
+- Face Mask: 2 rows in `clinique`, 3 rows in `fresh`
 
-- `Moisturizer`: 2 rows in `CLINIQUE`, 2 rows in `FRESH`
+- Moisturizer: 2 rows in `clinique`, 2 rows in `fresh`
 
-The inner join will match these rows based on `Type`. Since there are 2 rows in `CLINIQUE` for both `Face Mask` and `Moisturizer`, and 3 and 2 rows in `FRESH` respectively, the result will have:
+The inner join will match these rows based on `"Type"`. Since there are 2 rows in `clinique` for both Face Mask and Moisturizer, and 3 and 2 rows in `fresh` respectively, the result will have:
 
-- `Face Mask`: 2 (from `CLINIQUE`) × 3 (from `FRESH`) = 6 rows
+- Face Mask: 2 (from `clinique`) × 3 (from `fresh`) = 6 rows
 
-- `Moisturizer`: 2 (from `CLINIQUE`) × 2 (from `FRESH`) = 4 rows
+- Moisturizer: 2 (from `clinique`) × 2 (from `fresh`) = 4 rows
 
 The total number of rows in the resulting DataFrame is $$6 + 4 = 10$$.
 
@@ -60,41 +58,40 @@ The total number of rows in the resulting DataFrame is $$6 + 4 = 10$$.
 # END SUBPROB
 
 # BEGIN SUBPROB
-
+```python
 How many rows are in the following DataFrame?
 
     (clinique.merge(fresh, on="Type", how="outer")
              .merge(boscia, on="Type", how="outer"))
+```
 
 # BEGIN SOLUTION
-**Answer**: `31`
+**Answer**: 31
 
 An **outer join** includes all rows from all DataFrames, filling in missing values (`NaN`) for any `Type` not present in one of them. From the table, the counts are calculated as follows:
 
 Remember that our pivot_table `aggfunc` is calculating `lambda s: s.shape[0] + 1` (so we need to subtract one from the pivot table entry to get the actual number of rows).
 
-- `Cleanser`: `5 · 1`
-  - 5 rows in `CLINIQUE`
+- Cleanser: $5 \cdot 1$
+  - 5 rows in `clinique`
   - 1 row in `BOSCIA`
-
-- `Eye cream`: `3 · 1`
-  - 3 rows in `CLINIQUE`
+- Eye cream: $3 \cdot 1$
+  - 3 rows in `clinique`
   - 1 row in `BOSCIA`
-
-- `Face Mask`: `2 · 3 · 3`
-  - 2 rows in `CLINIQUE`
-  - 3 rows in `FRESH`
+- Face Mask: $2 \cdot 3 \cdot 3$
+  - 2 rows in `clinique`
+  - 3 rows in `fresh`
   - 3 rows in `BOSCIA`
+- Moisturizer: $2 \cdot 2$
+  - 2 rows in `clinique`
+  - 2 rows in `fresh`
 
-- `Moisturizer`: `2 · 2`
-  - 2 rows in `CLINIQUE`
-  - 2 rows in `FRESH`
+- Sun protect: 1
+  - 1 row in `clinique`
+\
 
-- `Sun protect`: 1
-  - 1 row in `CLINIQUE`
-
-### Final Calculation:
-$$5 · 1 + 3 · 1 + 2 · 3 · 3 + 2 · 2 + 1 = 31$$
+Final Calculation:
+$$5 \cdot 1 + 3 \cdot 1 + 2 \cdot 3 \cdot 3 + 2 \cdot 2 + 1 = 31$$
 
 <average>27</average>
 
