--- a/problems/fa24-final/q07.md
+++ b/problems/fa24-final/q07.md
@@ -29,7 +29,8 @@ $h_0^*$
 # BEGIN SOLUTION
 **Answer**: The mode of the data
 
-The minimizer of empirical risk for the constant model when using zero-one loss is the mode. 
+$R_0(h)$ counts the number of incorrect predictions for each prediction, so choosing the most frequent value (mode) minimizes this count.
+
 
 <average>100</average>
 
@@ -52,7 +53,7 @@ $h_1^*$
 # BEGIN SOLUTION
 **Answer**: The median of the data 
 
-The minimizer of empirical risk for the constant model when using absolute loss is the median.
+As seen in lecture, the minimizer of empirical risk for the constant model when using absolute loss is the median.
 
 <average>87</average>
 
@@ -75,7 +76,7 @@ $R_1(h_1^*)$
 # BEGIN SOLUTION
 **Answer**: None of the above
 
-The minimizer of empirical risk for $R_1(h_1^*)$ is the sum of absolute deviations from the median divided by $n$.
+As we discussed in the previous subpart, $h_1^*$, the minimizer of mean absolute error, is the median. So, $R_1(h_1^*)$ is the mean absolute difference (or deviation) between all values and the median. This is not any of the answer choices, and in general, is not a quantity we studied in detail in class.
 
 $R_1(h_1^*)$ represents the sum of absolute deviations from the median divided by $n$:
 
@@ -125,11 +126,11 @@ $R_2(h_2^*)$
 # BEGIN SOLUTION
 **Answer**: The variance of the data
 
-The minimizer of empirical risk for $R_2(h_2^*)$ is the mean squared error, which is equivalent to the variance of the data when $h_2^*$ equals the mean.
+$R_2(h)$ represents the mean squared error of the constant prediction, h. In the previous part, we discussed that $h_2^*$, the minimizer of R_2(h), is the mean, $\bar{y}$. So, $R_2(h_2^*)$ is then:
 
-$R_2(h_2^*)$ represents the mean squared error:
+$$R_2(h_2^*) = \frac{1}{n} \sum_{i = 1}^n (y_i - h_2^*)^2 = \frac{1}{n} \sum_{i = 1}^n (y_i - \bar{y})^2$$
 
-$$ R_2(h_2^*) = \frac{1}{n} \sum_{i=1}^n (y_i - h_2^*)^2 $$
+This is the definition of the variance of y.
 
 <average>70</average>
 
@@ -157,7 +158,12 @@ the data, $M$?
 # BEGIN SOLUTION
 **Answer**: $h_\text{U}^* \geq M$
 
-Since we're multiplying by $y_i$, the Ulta loss function skews the optimal prediction higher to reduce the impact of larger $y_i$ values on the loss. 
+Minimizing the average Ulta loss means minimizing the empirical risk:
+
+$$ R_U(h) = \frac{1}{n} \sum_{i = 1}^n y_i (y_i - h)^2. $$
+
+This resembles minimizing mean squared error, except each $y_i$ is given a weight of $y_i$. Since larger $y_i$ values contribute more to the loss, the minimizer is pulled toward higher values to reduce their impact. This results in $h_\text{U}^*$ being **greater than** the mean of the data.
+
 
 <average>42</average>
 
@@ -180,34 +186,37 @@ $$\frac{\partial R_\lambda(h)}{\partial h} = -2 \left( \frac{1}{n} \sum_{i = 1}^
 # BEGIN SUBPROB
 
 Find $h^*$, the constant prediction that minimizes $R_\lambda(h)$. Show
-your work, and put a around your final answer, which should be an
+your work, and put a $\boxed{\text{box}}$ around your final answer, which should be an
 **expression in terms of $y_i$, $n$, and/or $\lambda$**.
 
 # BEGIN SOLUTION
 **Answer**: $h^* = \frac{\sum_{i = 1}^n y_i^2}{\sum_{i = 1}^n y_i + n\lambda}$
 
+To minimize the regularized average Ulta loss, we solve for $h$ by setting  
+$$ \frac{\partial R_\lambda(h)}{\partial h} = 0. $$  
 
-To minimize the regularized average Ulta loss, we solve the equation by setting the derivative to zero and solving for $h$.
+Step 1: Compute the derivative and set it to zero  
 
-Set the derivative to zero:
+$$ \frac{\partial R_\lambda(h)}{\partial h} = -2 \left( \frac{1}{n} \sum_{i = 1}^n y_i (y_i - h) \right) + 2\lambda h = 0 $$
 
-$$ \frac{\partial R_\lambda(h)}{\partial h} = 0 $$
+Step 2: Expand and simplify  
 
-$$ -2 \left( \frac{1}{n} \sum_{i = 1}^n y_i (y_i - h) \right) + 2\lambda h = 0 $$
+$$ \frac{1}{n} \sum_{i = 1}^n y_i^2 - \frac{1}{n} \sum_{i = 1}^n y_i h - \lambda h = 0 $$  
 
-Simplify:
+Rearrange terms:  
 
-$$ \frac{1}{n} \sum_{i = 1}^n y_i^2 - \frac{1}{n} \sum_{i = 1}^n y_i h - \lambda h = 0 $$
+$$ \frac{1}{n} \sum_{i = 1}^n y_i^2 = h \left( \frac{1}{n} \sum_{i = 1}^n y_i + \lambda \right) $$  
 
-Combine terms:
+Step 3: Solve for $h$  
 
-$$ \frac{1}{n} \sum_{i = 1}^n y_i^2 = h \left( \frac{1}{n} \sum_{i = 1}^n y_i + \lambda \right) $$
+Divide both sides by  
+$$ \frac{1}{n} \sum_{i = 1}^n y_i + \lambda: $$  
 
-Solve for $h$:
+$$ h^* = \frac{\frac{1}{n} \sum_{i = 1}^n y_i^2}{\frac{1}{n} \sum_{i = 1}^n y_i + \lambda} $$  
 
-$$ h^* = \frac{\frac{1}{n} \sum_{i = 1}^n y_i^2}{\frac{1}{n} \sum_{i = 1}^n y_i + \lambda} $$
+Step 4: Multiply by $\frac{n}{n}$  
 
-$$ h^* = \frac{\sum_{i = 1}^n y_i^2}{\sum_{i = 1}^n y_i + n\lambda} $$
+$$ h^* = \frac{\sum_{i = 1}^n y_i^2}{\sum_{i = 1}^n y_i + n\lambda} $$  
 
 <average>71</average>
 
