--- a/problems/fa24-final/q08.md
+++ b/problems/fa24-final/q08.md
@@ -20,20 +20,20 @@ ingredients. What is the squared loss of our model's predicted number of
 ingredients for Victors' Veil? Give your answer as a **number**.
 
 # BEGIN SOLUTION
-**Answer**: $$16$$
+**Answer**: $16$
 
-The predicted number of ingredients for Victors' Veil is calculated using the regression model: $\hat{y} = w_0^* + w_1^* x$
+Using the equation of the regression model we have seen in class:  
+$$ H(x) = w_0^* + w_1^* x $$  
 
-Substituting $w_0^* = 11$, $w_1^* = \frac{1}{10}$, and $x = 40$: 
-$$
-\hat{y} = 11 + \frac{1}{10} \cdot 40 = 11 + 4 = 15
-$$
+Substitute $w_0^* = 11$, $w_1^* = \frac{1}{10}$, and $x = 40$:  
+$$ H(40) = 11 + \frac{1}{10} \cdot 40 = 11 + 4 = 15 $$  
 
-The squared loss is then:
+The squared loss is:  
+$$ L = (y - \hat{y})^2 $$  
 
-$$ 
-L = (\hat{y} - y)^2 = (15 - 11)^2 = 4^2 = 16
-$$
+Substituting $y = 11$ (actual) and $\hat{y} = 15$ (predicted):  
+$$ L = (11 - 15)^2 = (-4)^2 = 16 $$  
+
 
 <average>86</average>
 
@@ -54,8 +54,7 @@ part (a).
 # BEGIN SOLUTION
 **Answer**: Yes; the values of $w_0^*$ and $w_1^*$ don't impact the answer to part (a).
 
-To answer part (a), we only need to know the average values $\bar{x}$ and $\bar{y}$, as the regression line will always pass through $(\bar{x}, \bar{y})$. 
-
+A fact from lecture is that the regression line always passes through the point $(\bar{x}, \bar{y})$, meaning that for an average x, we always predict an average y. We’re given that $\bar{x}$ = 40 and $\bar{y}$ = 15, meaning that for a product that costs $40 we will predict that it has 15 ingredients, no matter what the slope and intercept end up being.
 <average>56</average>
 
 # END SOLUTION
@@ -74,13 +73,13 @@ Suppose $U$ is the design matrix for the simple linear regression model
 that uses **negative** price to predict number of ingredients. Which of
 the following matrices could be $U^TU$?
 
-$\begin{bmatrix} -15 & 600 \\ 600 & -30000 \end{bmatrix}$
+\(\text{( )} \) $\begin{bmatrix} -15 & 600 \\ 600 & -30000 \end{bmatrix}$
 
-$\begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}$
+\(\text{( )} \) $\begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}$
 
-$\begin{bmatrix} -15 & 450 \\ 450 & -30000 \end{bmatrix}$
+\(\text{( )} \) $\begin{bmatrix} -15 & 450 \\ 450 & -30000 \end{bmatrix}$
 
-$\begin{bmatrix} 15 & -450 \\ -450 & 30000 \end{bmatrix}$
+\(\text{( )} \) $\begin{bmatrix} 15 & -450 \\ -450 & 30000 \end{bmatrix}$
 
 
 # BEGIN SOLUTION
@@ -117,12 +116,12 @@ When we multiply this out, we get:
 $$
 U^T U =
 \begin{bmatrix}
-n & -\sum x_i \\
--\sum x_i & \sum x_i^2
+n & -\sum_{i = 1}^n x_i \\
+-\sum_{i = 1}^n x_i & \sum_{i = 1}^n x_i^2
 \end{bmatrix}
-$$
+$$  
 
-Conceptually, this matrix represents:
+Conceptually, this matrix represents:  
 $$
 \begin{bmatrix}
 \text{Number of elements} & \text{Sum of the negative values of the data} \\
@@ -132,16 +131,22 @@ $$
 
 We know that the sum of all elements in a series is equal to the mean of the series multiplied by the number of elements in the series.
 $$
-\Sigma x_i = n \cdot \bar{x}
+\sum_{i = 1}^n x_i = n \cdot \bar{x}
+$$  
+
+$\bar{x}$ is equal to $40$. The first element in the matrix, $15$, represents the number of elements in the series. Thus,  
 $$
+\displaystyle \sum_{i = 1}^n x_i = 40 \cdot 15 = 600
+$$  
+and the solution must be as follows:  
 
-$\bar{x}$ is equal to $40$. The first element in the matrix, $15$, represents the number of elements in the series. Thus, $\Sigma x_i = 40 \times 15 = 600$, and the solution must be as follows: 
-
-$$\begin{bmatrix}
-n & -\sum x_i \\
--\sum x_i & \sum x_i^2
+$$
+\begin{bmatrix}
+n & -\sum_{i = 1}^n x_i \\
+-\sum_{i = 1}^n x_i & \sum_{i = 1}^n x_i^2
 \end{bmatrix} = 
-\begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}$$
+\begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}
+$$  
 
 <average>74</average>
 
