--- a/problems/fa24-final/q12.md
+++ b/problems/fa24-final/q12.md
@@ -8,19 +8,19 @@ product **is** designed for sensitive skin (i.e. predict class 1).
 
 <figure style="display: flex; flex-wrap: wrap; gap: 10px;">
     <div class="minipage">
-        <img src="../assets/images/fa24-final/db1.png" width="400"/>
+        <img src="../assets/images/fa24-final/db1.png" width="300"/>
     </div>
     <div class="minipage">
-        <img src="../assets/images/fa24-final/db2.png" width="400"/>
+        <img src="../assets/images/fa24-final/db2.png" width="300"/>
     </div>
     <div class="minipage">
-        <img src="../assets/images/fa24-final/db3.png" width="400"/>
+        <img src="../assets/images/fa24-final/db3.png" width="300"/>
     </div>
     <div class="minipage">
-        <img src="../assets/images/fa24-final/db4.png" width="400"/>
+        <img src="../assets/images/fa24-final/db4.png" width="300"/>
     </div>
     <div class="minipage">
-        <img src="../assets/images/fa24-final/db5.png" width="400"/>
+        <img src="../assets/images/fa24-final/db5.png" width="300"/>
     </div>
 </figure>
 
@@ -35,9 +35,9 @@ Which model does Decision Boundary 1 correspond to?
 ( ) Logistic regression
 
 # BEGIN SOLUTION
-**Answer**: Logistic Regression
+**Answer**: Logistic regression  
 
-Logistic regression creates a linear divide between classes. 
+Logistic regression is a linear classification technique, meaning it creates a single linear decision boundary between classes. Among the five decision boundaries, only Decision Boundary 1 is linear, making it the correct answer.
 
 <average>93</average>
 
@@ -83,9 +83,12 @@ Which model does Decision Boundary 3 correspond to?
 
 $k$-nearest neighbors decision boundaries don't follow straight lines like logistic regression or decision trees. Thus, boundaries 3 and 4 are $k$-nearest neighbors. 
 
-Boundary 3 seems to be more fit to the data than boundary 4, so we can assume that we used a decision tree with $\text{max depth} = 3$. 
+A lower value of $k$ means the model is more sensitive to local variations in the data. Since Decision Boundary 3 has more complex and irregular regions than Decision Boundary 4, it corresponds to $k = 3$, where the model closely follows the training data.
 
 For example, if in our training data we had 3 points in the group represented by the light-shaded region at $(300, 150)$, the decision boundary for $k$-nearest neighbors with $k = 3$ would be light-shaded at $(300, 150)$, whereas it may be dark-shaded for $k$-nearest neighbors with $k = 100$. 
+
+
+
 
 <average>59</average>
 
@@ -108,7 +111,10 @@ Which model does Decision Boundary 4 correspond to?
 
 $k$-nearest neighbors decision boundaries don't follow straight lines like logistic regression or decision trees. Thus, boundaries 3 and 4 are $k$-nearest neighbors. 
 
-Boundary 3 seems to be less fit to the data than boundary 4, so we can assume that we used a decision tree with $\text{max depth} = 100$. 
+$k$-nearest neighbors decision boundaries adapt to the training data, but increasing $k$ makes the model less sensitive to local variations.  
+
+Since Decision Boundary 4 is smoother and has fewer regions than Decision Boundary 3, it corresponds to $k = 100$, where predictions are averaged over a larger number of neighbors, making the boundary less sensitive to individual data points.
+
 
 <average>56</average>
 
