--- a/problems/fa24-final/q13.md
+++ b/problems/fa24-final/q13.md
@@ -23,7 +23,7 @@ Consider the following four products:
 
 Which of the following products have a predicted probability of being
 designed for sensitive skin of **at least 0.5 (50%)**? For each product,
-select Yes or No and justify your answer.
+select Yes or No.
 
 
 
@@ -32,35 +32,41 @@ select Yes or No and justify your answer.
 ( ) Yes 
 ( ) No
 
-**Justify your answer.**
 
 **Go Blue Glow:** 
 
 ( ) Yes 
 ( ) No
 
-**Justify your answer.**
 
 **DataSPF:**
 
 ( ) Yes 
 ( ) No
 
-**Justify your answer.**
 
 **Maize Mist:** 
 
 ( ) Yes 
 ( ) No
 
-**Justify your answer.**
 
 # BEGIN SOLUTION
 
-In order to solve this problem, we need to use the sigmoid function to cast our result into a probability between 0-1. As a reminder, the sigmoid function $\frac{1}{1 + e^{-x}}$ trends towards 0 when the input becomes more negative, and towards 1 as the input becomes a higher positive.
+Using the sigmoid function, we can predict the probabliity using this general formula - 
+
+$$ P(y = 1 | \vec{x}) = \sigma(\vec{w}^T \vec{x}) $$
+
+where $\sigma(x) = \frac{1}{1 + e^{-x}}$ is the sigmoid function.
+
+We calculate $z = \vec{w}^T \vec{x}$ for each product and then apply the sigmoid function to find the probability $P(y = 1 | \vec{x})$. If the probability is greater than or equal to 0.5, the product is predicted to be designed for sensitive skin.
+
 
 **Wolfcare**:
 
+$$
+z = \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix}^T \cdot \begin{bmatrix} 1 \\ 15 \\ 20 \\ 4.5 \end{bmatrix}
+$$
 $$
 z = -1 + \frac{1}{5}(15) - \frac{3}{5}(20) + 0 = -1 + 3 - 12 = -10
 $$
@@ -68,10 +74,14 @@ $$
 P = \frac{1}{1 + e^{-(-10)}} = \frac{1}{1 + e^{10}} \approx 0
 $$
 
+
 **Decision: No**, as $P < 0.5$
 
 **Go Blue Glow**:
 
+$$
+z = \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix}^T \cdot \begin{bmatrix} 1 \\ 25 \\ 5 \\ 4.9 \end{bmatrix}
+$$
 $$
 z = -1 + \frac{1}{5}(25) - \frac{3}{5}(5) + 0 = -1 + 5 - 3 = 1
 $$
@@ -84,6 +94,9 @@ $$
 **DataSPF**:
 
 $$
+z = \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix}^T \cdot \begin{bmatrix} 1 \\ 50 \\ 15 \\ 3.6 \end{bmatrix}
+$$
+$$
 z = -1 + \frac{1}{5}(50) - \frac{3}{5}(15) + 0 = -1 + 10 - 9 = 0
 $$
 $$
@@ -93,6 +106,9 @@ $$
 **Decision: Yes**, as $P \geq 0.5$.
 
 **Maize Mist**:
+$$
+z = \begin{bmatrix} -1 \\ \frac{1}{5} \\ -\frac{3}{5} \\ 0 \end{bmatrix}^T \cdot \begin{bmatrix} 1 \\ 0 \\ 1 \\ 5.0 \end{bmatrix}
+$$
 $$
 z = -1 + \frac{1}{5}(0) - \frac{3}{5}(1) + 0 = -1 - 0.6 = -1.6
 $$
