--- a/problems/fa24-final/q14.md
+++ b/problems/fa24-final/q14.md
@@ -51,8 +51,9 @@ What is the precision of the resulting predictions? Give your answer as
 an **unsimplified fraction**.
 
 # BEGIN SOLUTION
-**Answer**: $\boxed{\frac{35}{40}}$
-The precision of a classification model is calculated as:
+**Answer**: $\frac{35}{40}$ 
+
+The precision of a binary classification model is calculated as:
 
 $$
 \text{Precision} = \frac{\text{True Positives (TP)}}{\text{True Positives (TP)} + \text{False Positives (FP)}}
@@ -78,11 +79,6 @@ $$
 \text{Precision} = \frac{35}{35 + 5} = \frac{35}{40}
 $$
 
-Thus, the precision for threshold $A$ is:
-
-$$
-\boxed{\frac{35}{40}}
-$$
 
 <average>85</average>
 
@@ -121,7 +117,7 @@ $$
 Using this total, for threshold $B$, the entries provided are:
 
 $$
-5 (\text{TN}) + 40 (\text{FP}) + 10 (\text{FN}) + ??? (\text{TP}) = 115
+5  + 40  + 10  + ??? = 115
 $$
 
 Solving for the missing value (???):
@@ -133,7 +129,7 @@ $$
 Thus, the missing value for threshold $B$ is:
 
 $$
-\boxed{60}
+60
 $$
 
 <average>90</average>
@@ -156,13 +152,12 @@ $0 \leq A, B, C \leq 1$.
 ( ) $C$ $>$ $B$ $>$ $A$
 
 # BEGIN SOLUTION
-Thresholds can be arranged based on their strictness. Higher thresholds result in more predictions for class 0 (more products classified as not designed for sensitive skin).
+**Answer**: $A > C > B$
 
-From the confusion matrices:
-- Threshold $A$ predicts the least as 0 and Threshold $B$ predicts the most as 0.
+Thresholds can be arranged based on their strictness. The higher a model’s threshold is, the fewer positive predictions and the more negative predictions it has. Model A made 40 negative predictions, Model B made 5 negative predictions and  Model C made 10 negative predictions. Sorting these in descending order with more negative predictions implying a stricter threshold we get - 
 
 $$
-\boxed{A > C > B}
+A > C > B
 $$
 
 <average>67</average>
@@ -180,6 +175,8 @@ explain which is **worse** in this context and **why**: a false positive
 or a false negative.
 
 # BEGIN SOLUTION
+**Answer**: False positive
+
 A false positive is worse, as it would mean we predict a product is safe when it isn't; someone with sensitive skin may use it and it could harm them.
 
 <average>91</average>
