--- a/problems/fa24-final/q15.md
+++ b/problems/fa24-final/q15.md
@@ -14,24 +14,17 @@ What goes in the blank? Show your work, and put a your final answer,
 which should be an **expression involving $x_1$ and/or $x_2$**.
 
 # BEGIN SOLUTION
-**Answer**: $\nabla Q(\vec{x}) = \begin{bmatrix} 2(x_1 - x_2) \\ -2x_1 + 6x_2 \end{bmatrix}$
+**Answer**: $-2x_1 + 6x_2$
 
 The gradient of $Q(\vec{x})$ is given by:
 $$
 \nabla Q(\vec{x}) = \begin{bmatrix} \frac{\partial Q}{\partial x_1} \\ \frac{\partial Q}{\partial x_2} \end{bmatrix}
 $$
 
-First, compute the partial derivatives:
+First, calculate the partial derivative:
+Partial derivative with respect to $x_1$ is provided to us in the question: $2x_1 - 2x_2$
 
-1. Partial derivative with respect to $x_1$:
-$$
-Q(x_1, x_2) = x_1^2 - 2x_1x_2 + 3x_2^2 - 1
-$$
-$$
-\frac{\partial Q}{\partial x_1} = 2x_1 - 2x_2
-$$
-
-2. Partial derivative with respect to $x_2$:
+Partial derivative with respect to $x_2$:
 $$
 \frac{\partial Q}{\partial x_2} = -2x_1 + 6x_2
 $$
@@ -65,38 +58,29 @@ $\alpha$?
 ( ) $\displaystyle \frac{5}{2}$
 
 # BEGIN SOLUTION
-**Final Answer**: $\frac{5}{4}$
+**Answer**: $\frac{5}{4}$
 
-In gradient descent, the update rule is:
+In gradient descent, the update rule is: 
 $$
-\vec{x}^{(k+1)} = \vec{x}^{(k)} - \alpha \nabla Q(\vec{x}^{(k)})
+\vec{x}^{(t+1)} = \vec{x}^{(t)} - \alpha \nabla Q(\vec{x}^{(t)})
 $$
 
-We are given:
+From the question we know that:
 $$
 \vec{x}^{(0)} = \begin{bmatrix} 1 \\ 1 \end{bmatrix}, \quad \vec{x}^{(1)} = \begin{bmatrix} 1 \\ -4 \end{bmatrix}
 $$
 
-1. Compute $\nabla Q(\vec{x}^{(0)})$:
-
-Substitute $\vec{x}^{(0)} = \begin{bmatrix} 1 \\ 1 \end{bmatrix}$ into the gradient:
+We can use $\vec{x}^{(0)}$ to first calculate what is the gradient of Q at $\vec{x}^{(0)}$
 $$
 \nabla Q(\vec{x}^{(0)}) = \begin{bmatrix} 2(1 - 1) \\ -2(1) + 6(1) \end{bmatrix} = \begin{bmatrix} 0 \\ 4 \end{bmatrix}
 $$
 
-2. Use the update rule to find $\alpha$:
-
-From the update rule:
-$$
-\vec{x}^{(1)} = \vec{x}^{(0)} - \alpha \nabla Q(\vec{x}^{(0)})
-$$
-
-Substitute the values:
+We can now substitute this value for the gradient of Q at $\vec{x}^{(0)}$ into the update rule. This gives us - 
 $$
 \begin{bmatrix} 1 \\ -4 \end{bmatrix} = \begin{bmatrix} 1 \\ 1 \end{bmatrix} - \alpha \begin{bmatrix} 0 \\ 4 \end{bmatrix}
 $$
 
-Separate components:
+Next, we can solve each separate component to find the value of $\alpha$ - 
 $$
 1 = 1 - \alpha(0) \quad \text{(satisfied for any $\alpha$)},
 $$
@@ -104,7 +88,7 @@ $$
 -4 = 1 - \alpha(4)
 $$
 
-Solve for $\alpha$:
+Solving for $\alpha$ gives us :
 $$
 -4 = 1 - 4\alpha \implies 4\alpha = 5 \implies \alpha = \frac{5}{4}
 $$
