--- a/problems/fa24-final/q05.md
+++ b/problems/fa24-final/q05.md
@@ -3,19 +3,19 @@
 Consider a sample of 60 skincare products. The name of one product from
 the sample is given below:
 
-"our **drops** cream is the best **drops** **drops** for eye **drops**
-**drops** proven formula\...\"
+  "our **drops** cream is the best **drops** **drops** for eye **drops**
+        **drops** proven formula\...\"
 
 The total number of terms in the product name above is unknown, but we
 know that the term **drops** only appears in the name 5 times.
 
-Suppose the TF-IDF of `drops` in the product name above is
+Suppose the TF-IDF of **drops** in the product name above is
 $\frac{2}{3}$. Which of the following statements are **NOT possible**,
 assuming we use a base-2 logarithm? Select all that apply.
 
-[ ] **All** 60 product names contain the term `drops`, **including** the one above.
-[ ] 14 **other** product names contain the term `drops`, in addition to the one above.
-[ ] None of the 59 **other** product names contain the term `drops`.
+[ ] **All** 60 product names contain the term **drops**, **including** the one above.
+[ ] 14 **other** product names contain the term **drops**, in addition to the one above.
+[ ] None of the 59 **other** product names contain the term **drops**.
 [ ] There are 15 terms in the product name above **in total**.
 [ ] There are 25 terms in the product name above **in total**.
 
@@ -23,131 +23,70 @@ assuming we use a base-2 logarithm? Select all that apply.
 
 **Answer**: 
 
-- **All** 60 product names contain the term `drops`.  
-- None of the 59 **other** product names contain the term `drops`.  
+- **All** 60 product names contain the term **drops**.  
+- None of the 59 **other** product names contain the term **drops**.  
 - There are 25 terms in the product name above **in total**.
 
 The TF-IDF score of a term is calculated as:
 $$
-\text{TF-IDF} = \text{TF} \cdot \text{IDF}
+\text{tf-idf}(t,d) = \text{tf}(t,d) \cdot \text{idf}(t)
+                    = \frac{\# \text{ of occurrences of } t \text{ in } d }{\text{total } \# \text{ of terms in } d} \cdot \log_2\left(\frac{\text{total } \# \text{ of documents}}{\# \text{ of documents in which } t \text{ appears}}\right)
 $$
-Where:
 
-- $\text{TF}$: Term Frequency in a document (the ratio of the term's occurrences to the total number of terms in the document).
 
-- $\text{IDF}$: Inverse Document Frequency, which is given by:
+We know: 
+
+- $t$ appears 5 times in $d$ 
+
+- Total number of documents = 60 
+
+- $\text{TF-IDF} = \frac{2}{3}$ 
+
+
+Let T be the total number of terms in d (d refers to the sentence at the top) and n refer to number of documents in which t appears, then substituting this into our formula gives us:
+$$
+\frac{5}{T} \cdot \log_2\left(\frac{60}{n}\right) = \frac{2}{3}
+$$
+
+The problem then boils down to checking whether the above equation holds true in each of the five options
+
+* **Option 1: All 60 product names contain the term **drops**.** 
+  - If $n = 60$, then $\log_2(60/60) = 0$ 
+  - This makes TF-IDF = 0, contradicting $\frac{2}{3}$ \
+
+  **This is NOT possible.**
+
+* **Option 2: 14 other product names contain the term **drops**.**
+  - If $n = 15$ (original document + 14 others), $\log_2(60/15) = 2$
+  - $\frac{5}{T} \cdot 2 = \frac{2}{3}$ implies $T = 15$ \
+
+  **This is possible.**
+
+* **Option 3: None of the 59 other product names contain the term **drops**.**
+  - If $n = 1$, $\log_2(60/1) \approx 5.91$
+  - This leads to a non-integer total terms $T$
+  - Since $T$ must be an integer, this is not consistent with the problem's constraints. \
+
+  **This is NOT possible.**
+
+* **Option 4: There are 15 terms in the product name above in total.**
+  If $T = 15$, substituting into the TF equation, we get:
+
+  $\text{TF} = \frac{5}{15} = \frac{1}{3}$
+  $\frac{1}{3} \cdot \text{IDF} = \frac{2}{3} \implies \text{IDF} = 2 $
+  Substituting $\text{IDF} = 2$ into the IDF formula:
   $$
-  \text{IDF} = \log_2\left(\frac{N}{1 + n}\right)
+  2 = \log_2\left(\frac{60}{n}\right)
   $$
-  Here:
+  $$
+  2 = \log_2(4) \implies \frac{60}{n} = 4 \implies n = 14
+  $$
+  This is consistent with the problem's constraints.
 
-  - $N$: Total number of documents (60 in this case).
+  **This is possible.**
+ 
 
-  - $n$: Number of documents containing the term.
-
-The TF-IDF of `drops` in the product name is given as $\frac{2}{3}$.
-
----
-
-**Step 1: Calculating Term Frequency (TF)**
-The problem states that the term `drops` appears \textbf{5 times} in the product name. If the total number of terms in the product name is $T$, then:
-$$
-\text{TF} = \frac{5}{T}
-$$
-
----
-
-**Step 2: Calculating Inverse Document Frequency (IDF)**
-Substitute the known values into the IDF formula:
-$$
-\text{IDF} = \log_2\left(\frac{60}{1 + n}\right)
-$$
-Where $n$ is the number of other product names (out of 59) that contain `drops`.
-
----
-
-**Step 3: Combine TF and IDF to Match TF-IDF**
-The TF-IDF is given as $\frac{2}{3}$. Substituting the expressions for TF and IDF:
-$$
-\frac{5}{T} \cdot \log_2\left(\frac{60}{1 + n}\right) = \frac{2}{3}
-$$
-
----
-
-**Step 4: Analyze Each Option**
-
-\textbf{Option 1: All 60 product names contain the term `drops`.}  
-If all 60 product names contain `drops`, then $n = 59$. Substituting into the IDF formula:
-$$
-\text{IDF} = \log_2\left(\frac{60}{1 + 59}\right) = \log_2(1) = 0
-$$
-Since $\text{IDF} = 0$, the TF-IDF score would also be 0, which contradicts the given TF-IDF of $\frac{2}{3}$.
-
-**This is NOT possible.**
-
----
-
-\textbf{Option 2: 14 other product names contain the term `drops`.}  
-If 14 other product names contain `drops`, then $n = 14$. Substituting into the IDF formula:
-$$
-\text{IDF} = \log_2\left(\frac{60}{1 + 14}\right) = \log_2\left(\frac{60}{15}\right) = \log_2(4) = 2
-$$
-Substituting $\text{IDF} = 2$ into the TF-IDF equation:
-$$
-\frac{5}{T} \cdot 2 = \frac{2}{3}
-$$
-Solving for $T$:
-$$
-\frac{10}{T} = \frac{2}{3} \implies T = 15
-$$
-This within the problem's constraints.
-
-**This is possible.**
-
----
-
-\textbf{Option 3: None of the 59 other product names contain the term `drops`.}  
-If no other product names contain `drops`, then $n = 0$. Substituting into the IDF formula:
-$$
-\text{IDF} = \log_2\left(\frac{60}{1 + 0}\right) = \log_2(60)
-$$
-Approximating $\log_2(60) \approx 5.91$, substituting into the TF-IDF equation:
-$$
-\frac{5}{T} \cdot 5.91 = \frac{2}{3}
-$$
-Solving for $T$:
-$$
-\frac{29.55}{T} = \frac{2}{3} \implies T \approx 44.33
-$$
-Since $T$ must be an integer, this is not consistent with the problem's constraints.
-
-**This is NOT possible.**
-
----
-
-\textbf{Option 4: There are 15 terms in the product name above in total.}  
-If $T = 15$, substituting into the TF equation:
-$$
-\text{TF} = \frac{5}{15} = \frac{1}{3}
-$$
-Substituting $\text{TF} = \frac{1}{3}$ into the TF-IDF equation:
-$$
-\frac{1}{3} \cdot \text{IDF} = \frac{2}{3} \implies \text{IDF} = 2
-$$
-Substituting $\text{IDF} = 2$ into the IDF formula:
-$$
-2 = \log_2\left(\frac{60}{1 + n}\right)
-$$
-$$
-2 = \log_2(4) \implies \frac{60}{1 + n} = 4 \implies n = 14
-$$
-This is consistent with the problem's constraints.
-
-**This is possible.**
-
----
-
-\textbf{Option 5: There are 25 terms in the product name above in total.}  
+* **Option 5: There are 25 terms in the product name above in total.**
 If $T = 25$, substituting into the TF equation:
 $$
 \text{TF} = \frac{5}{25} = \frac{1}{5}
@@ -158,11 +97,11 @@ $$
 $$
 Substituting $\text{IDF} = \frac{10}{3}$ into the IDF formula:
 $$
-\frac{10}{3} = \log_2\left(\frac{60}{1 + n}\right)
+\frac{10}{3} = \log_2\left(\frac{60}{n}\right)
 $$
 This results in a value for $n$ that is not an integer. 
 
-**This is NOT possible.**
+  **This is NOT possible.**
 
 <average>80</average>
 
