--- a/problems/fa24-final/q10.md
+++ b/problems/fa24-final/q10.md
@@ -9,6 +9,7 @@ To choose the polynomial degree and regularization hyperparameter, we
 use cross-validation through `GridSearchCV` in `sklearn` using the code
 below.
 
+```python
     searcher = GridSearchCV(
         make_pipeline(PolynomialFeatures(include_bias=False), 
                       Ridge()),
@@ -19,7 +20,7 @@ below.
         cv=K # K-fold cross-validation.
     ) 
     searcher.fit(X_train, y_train)
-
+```
 Assume that there are $N$ rows in `X_train`, where $N$ is a multiple of
 $K$ (the number of folds used for cross-validation).
 
@@ -33,7 +34,9 @@ How many combinations of hyperparameters are being considered?
 **Answer**: $LD$
 
 # BEGIN SOLUTION
-We have a grid with 2 features: $L$, which we use to iterate our $\lambda$ value in ridge regression, and $D$, which we use to iterate the polynomial degree for one of our hyperparameters. 
+**Answer**: $LD$
+
+There are $L$ possible values of $\lambda$ and $D$ possible polynomial degrees, giving $LD$ total combinations of hyperparameters.
 
 # END SOLUTION
 
@@ -45,9 +48,9 @@ We have a grid with 2 features: $L$, which we use to iterate our $\lambda$ value
 used to train the model?
 
 # BEGIN SOLUTION
-**Answer**: $N \times \frac{K-1}{K}$
+**Answer**: $N \cdot \frac{K-1}{K}$
 
-In $K$-fold cross-validation, the data is split into $K$ folds. Each time a model is trained, one fold is used for validation, and the remaining $K-1$ folds are used for training. Since $N$ is evenly split among $K$ folds, each fold contains $\frac{N}{K}$ points. The training data, therefore, consists of $N - \frac{N}{K} = N \times \frac{K-1}{K}$ points.
+In $K$-fold cross-validation, the data is split into $K$ folds. Each time a model is trained, one fold is used for validation, and the remaining $K-1$ folds are used for training. Since $N$ is evenly split among $K$ folds, each fold contains $\frac{N}{K}$ points. The training data, therefore, consists of $N - \frac{N}{K} = N \cdot \frac{K-1}{K}$ points.
 
 <average>72</average>
 
@@ -64,7 +67,7 @@ time**? Assume that these two points are in different folds.
 # BEGIN SOLUTION
 **Answer**: $LD \times (K-2)$
 
-In K-fold cross-validation, `X_{\text{train}}.\text{iloc}[1]` and `X_{\text{train}}.\text{iloc}[-1]` are in different folds and can only be used together for training when neither of their respective folds is the validation set. This happens in $(K-2)$ folds for each combination of polynomial degree ($D$) and regularization hyperparameter ($L$). Since there are $L \times D$ total combinations in the grid search, the two points are used together for training $LD \times (K-2)$ times.
+In K-fold cross-validation, `X_train.iloc[1]` and `X_train.iloc[-1]` are in different folds and can only be used together for training when neither of their respective folds is the validation set. This happens in $(K-2)$ folds for each combination of polynomial degree ($D$) and regularization hyperparameter ($L$). Since there are $L \times D$ total combinations in the grid search, the two points are used together for training $LD \times (K-2)$ times.
 
 <average>53</average>
 
