--- a/problems/fa24-final/q11.md
+++ b/problems/fa24-final/q11.md
@@ -10,7 +10,7 @@ cross-validation, we determine the average validation mean squared error
 different choices of $\lambda$. The results are given below.
 
 
-<center><img src="../assets/images/fa24-final/avmse.png" width=800></center>
+<center><img src="../assets/images/fa24-final/avmse.png" width=600></center>
 
 
 # BEGIN SUBPROB
@@ -26,7 +26,8 @@ variance?
 # BEGIN SOLUTION
 **Answer**: Model complexity and model variance both decrease.
 
-As $\lambda$ increases, the $L_1$ regularization penalizes the model more heavily for including features, effectively reducing the number of non-zero coefficients in the model. This decreases model complexity. Additionally, by reducing complexity, the model becomes less sensitive to the training data, leading to lower variance.
+As $\lambda$ increases, the $L_1$ regularization penalizes larger coefficient values more heavily, forcing the model to forget the details in the training data and focus on the bigger picture. This effectively reduces the number of non-zero coefficients, decreasing model complexity. Since model complexity and model variance are the same thing, variance also decreases.
+
 
 <average>64</average>
 
@@ -64,7 +65,7 @@ What does the value $B$ on the graph above correspond to?
 # BEGIN SOLUTION
 **Answer**: The AVMSE of the $\lambda$ we'd choose to use to train a model.
 
-Point $B$ is the minimum point on the graph, indicating the optimal $\lambda$ value that minimizes the AVMSE. This is the $\lambda$ we’d choose to train the model.
+Point $B$ is the minimum point on the graph, indicating the optimal $\lambda$ value that minimizes the AVMSE. This is because we don’t typically regularize the intercept term’s coefficient, $w_0^*$.
 
 <average>91</average>
 
