small edits to the final solutions after review

--- a/problems/fa24-final/q08.md
+++ b/problems/fa24-final/q08.md
@@ -29,9 +29,9 @@ Substitute $w_0^* = 11$, $w_1^* = \frac{1}{10}$, and $x = 40$:
 $$ H(40) = 11 + \frac{1}{10} \cdot 40 = 11 + 4 = 15 $$  
 
 The squared loss is:  
-$$ L = (y - \hat{y})^2 $$  
+$$ L = (y - H(x_i))^2 $$  
 
-Substituting $y = 11$ (actual) and $\hat{y} = 15$ (predicted):  
+Substituting $y = 11$ (actual) and $H(x_i) = 15$ (predicted):  
 $$ L = (11 - 15)^2 = (-4)^2 = 16 $$  
 
 
@@ -46,10 +46,8 @@ $$ L = (11 - 15)^2 = (-4)^2 = 16 $$
 Is it possible to answer part (a) above **just** by knowing $\bar x$ and
 $\bar y$, i.e. **without** knowing the values of $w_0^*$ and $w_1^*$?
 
-( ) Yes; the values of $w_0^*$ and $w_1^*$ don't impact the answer to
-part (a).
-( ) No; the values of $w_0^*$ and $w_1^*$ are necessary to answer part
-(a).
+( ) Yes; the values of $w_0^*$ and $w_1^*$ don't impact the answer to part (a).
+( ) No; the values of $w_0^*$ and $w_1^*$ are necessary to answer part (a).
 
 # BEGIN SOLUTION
 **Answer**: Yes; the values of $w_0^*$ and $w_1^*$ don't impact the answer to part (a).
@@ -73,13 +71,11 @@ Suppose $U$ is the design matrix for the simple linear regression model
 that uses **negative** price to predict number of ingredients. Which of
 the following matrices could be $U^TU$?
 
-\(\text{( )} \) $\begin{bmatrix} -15 & 600 \\ 600 & -30000 \end{bmatrix}$
+( ) \ $\begin{bmatrix} -15 & 600 \\ 600 & -30000 \end{bmatrix}$ \
+( ) \ $\begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}$ \
+( ) \ $\begin{bmatrix} -15 & 450 \\ 450 & -30000 \end{bmatrix}$ \
+( ) \ $\begin{bmatrix} 15 & -450 \\ -450 & 30000 \end{bmatrix}$ \
 
-\(\text{( )} \) $\begin{bmatrix} 15 & -600 \\ -600 & 30000 \end{bmatrix}$
-
-\(\text{( )} \) $\begin{bmatrix} -15 & 450 \\ 450 & -30000 \end{bmatrix}$
-
-\(\text{( )} \) $\begin{bmatrix} 15 & -450 \\ -450 & 30000 \end{bmatrix}$
 
 
 # BEGIN SOLUTION
